cards container fixed wit spacing

--- a/client/src/App/loginAndSignup/Signup/Welcome/userCards.css
+++ b/client/src/App/loginAndSignup/Signup/Welcome/userCards.css
@@ -9,12 +9,12 @@ h1{
 .cardsContainer {
   margin-top: 90px;
   margin-left: 270px;
+  padding: 15px;
   width: 80%;
   border-style: solid;
   border-color: black;
   display: flex;
-  justify-content: space-around;
-
+  justify-content: space-between;
 }
 
 .userCards {
@@ -29,6 +29,7 @@ h1{
   height: 100%;
   box-shadow: 10px 5px 8px 10px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  padding: 10px;
   
 }
 
